✨ Clean URLs: Remove .html extensions, add .htaccess for professional URL structure

--- a/guide.html
+++ b/guide.html
@@ -13,7 +13,7 @@
       gtag('config', 'G-14X8EGCXSH');
     </script>
     
-    <title>OPTPLANNER - OPT Application Guide</title>
+    <title>OPTPLANNER - Guide</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="guide-styles.css">
@@ -34,10 +34,10 @@
                     <h1 class="site-title">OPTPLANNER</h1>
                 </div>
                 <div class="nav-menu">
-                    <a href="index.html" class="nav-link">
+                                        <a href="/" class="nav-link">
                         <span class="nav-icon">🏠</span>
                         <span>Home</span>
-                        </a>
+                    </a>
                     <a href="guide.html" class="nav-link active">
                         <span class="nav-icon">📋</span>
                         <span>Step-by-Step Guide</span>
@@ -417,7 +417,7 @@
                 <div class="footer-links">
                     <a href="https://www.uscis.gov/i-765" target="_blank">Official USCIS I-765 Form</a>
                     <a href="https://www.ice.gov/sevis" target="_blank">SEVIS Information</a>
-                    <a href="index.html">Back to OPT Planner</a>
+                    <a href="/">Back to OPT Planner</a>
                 </div>
             </div>
         </footer>
