--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <span class="nav-icon">🏠</span>
                         <span>Home</span>
                     </a>
-                    <a href="guide.html" class="nav-link">
+                    <a href="/guide" class="nav-link">
                         <span class="nav-icon">📋</span>
                         <span>Step-by-Step Guide</span>
                     </a>
