✨ Branding update: Change OPTPLANNER to OPT PLANNER for better clarity and professionalism

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       gtag('config', 'G-14X8EGCXSH');
     </script>
     
-    <title>OPTPLANNER - OPT Timeline Planner</title>
+    <title>OPT PLANNER - OPT Timeline Planner</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -44,7 +44,7 @@
         <nav class="main-navigation">
             <div class="nav-container">
                 <div class="nav-brand">
-                    <h1 class="site-title">OPTPLANNER</h1>
+                    <h1 class="site-title">OPT PLANNER</h1>
                 </div>
                 <div class="nav-menu">
                     <a href="index.html" class="nav-link active">
@@ -59,9 +59,9 @@
             </div>
         </nav>
 
-        <!-- Main optplanner Heading -->
+        <!-- Main OPT PLANNER Heading -->
         <div class="main-heading">
-            <h1 class="main-title">OPTPLANNER</h1>
+            <h1 class="main-title">OPT PLANNER</h1>
             <div class="planning-quote">
                 <p>"Time lost is never found again. Plan ahead."</p>
             </div>
