Fix PDF viewer and navigation issues - Remove duplicate OPTGuide initialization - Fix PDF file path encoding for proper loading - Update package.json scripts for local development - Navigation tabs now work correctly - PDF download and viewer functionality restored

--- a/guide.html
+++ b/guide.html
@@ -374,7 +374,7 @@
                     <div class="pdf-viewer">
                         <iframe 
                             id="pdfFrame" 
-                            src="(Updated 01 -2025) Student-Facing OPT USCIS E-Filing Instructions - US Letter (11 x 8.5 in).pdf#toolbar=0&navpanes=0&scrollbar=0&view=FitH"
+                            src="%28Updated%2001%20-2025%29%20Student-Facing%20OPT%20USCIS%20E-Filing%20Instructions%20-%20US%20Letter%20%2811%20x%208.5%20in%29.pdf#toolbar=0&navpanes=0&scrollbar=0&view=FitH"
                             width="100%" 
                             height="600px"
                             frameborder="0"
@@ -424,11 +424,5 @@
     </div>
 
     <script src="guide.js"></script>
-    <script>
-        // Initialize the OPT Guide when the page loads
-        document.addEventListener('DOMContentLoaded', function() {
-            new OPTGuide();
-        });
-    </script>
 </body>
 </html> 
