Fix inaccurate STEM extension filing timeline information - Change 'must be filed 90 days before' to 'can be filed up to 90 days before' - Clarify that filing before expiration is recommended, not required - Update both timeline display and important notes section - Ensure accuracy with current USCIS regulations

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                                     <div class="timeline-content">
                                         <h4>STEM Extension Filing</h4>
                                         <div class="timeline-date" id="stemFilingWindow"></div>
-                                        <p>File within 90 days before OPT expires (recommended timeframe)</p>
+                                        <p>File up to 90 days before OPT expires (recommended to file before expiration)</p>
                                     </div>
                                 </div>
                                 <div class="timeline-item success">
@@ -334,7 +334,7 @@
                             <li>File I-765 between 90 days before and 60 days after graduation</li>
                             <li>OPT must start within 60 days of graduation</li>
                             <li>STEM graduates may be eligible for 24-month extension</li>
-                            <li>STEM extension must be filed 90 days before OPT expires</li>
+                            <li>STEM extension can be filed up to 90 days before OPT expires (recommended to file before expiration)</li>
                             <li>Always verify dates with your DSO and current regulations</li>
                         </ul>
                     </div>
